syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

message HelloRequest{
    string request_msg=1;
}